# item-comparison-api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
data/: items.json
docs/: architecture.md  development-guide.md  insomnia-collection.yaml  payload-examples.md
src/: main.py
src/adapters/: repository.py
src/config/: app.py  dependencies.py
src/domain/: comparison.py  model.py
src/entrypoints/: router.py
src/entrypoints/handlers/: comparison.py  general.py  items.py
src/entrypoints/routers/: items.py  management.py
src/service_layer/: services.py
tests/: conftest.py
tests/e2e/entrypoints/routers/: conftest.py  test_comparison.py  test_items.py  test_management.py
tests/integration/adapters/: test_repository.py
tests/unit/domain/: test_model.py
tests/unit/service_layer/: test_services.py
